networking-prac/backend/nginx.yaml
# backend/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-nginx
  namespace: backend
  labels:
    app: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
